--- a/style.css
+++ b/style.css
@@ -12,29 +12,32 @@
     font-size: 20px;
 }
 
-.sectionA {
+#sectionA {
     background-image: url(donation1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 70vh;
-    padding-top: 100px;
+    height: 90vh;
+    padding-top: 200px;
 }
 
 body {
     margin: 0;
 }
 
-.dv {
+.button {
     color: #03171f;
     background-color: #e3cb31;
     font-size: 30px;
-    padding: 10px 5px;
+    padding: 10px 20px;
     border-radius: 10px;
     text-decoration: none;
+    font-weight: 900px;
+
 }
 
 .edit {
     text-align: center;
+    padding-bottom: 50%;
 }
 
 .text2 {
@@ -78,13 +81,13 @@ body {
     color: rgba(0, 0, 0, 0.586);
 }
 
-.line {
-    width: 500px;
-    height: 0px;
-    margin-left: 38%;
-    margin-bottom: 200px;
-    border: 1px solid rgba(0, 0, 0, 0.564);
+#line {
+    border: 1px solid black;
+    border-top: 0px solid;
+    margin: 20%;
 }
+
+
 
 .new {
     text-align: center;
@@ -92,10 +95,98 @@ body {
 
 span {
     font-size: 20px;
-    color: rgba(0, 0, 0, 0.574);
+    text-align: center;
+
 }
 
 .plan {
     display: flex;
-    width: 40px;
+    padding: 50px;
+    padding-laft: 10px;
+
+}
+
+#box1 {
+    border: none;
+    margin-left: 10px;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    box-shadow: #03171f;
+    text-align: left;
+    padding-right: 30px;
+    background-color: rgba(0, 0, 0, 0.038);
+}
+
+#box2 {
+    border: none;
+    margin-left: 10px;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    box-shadow: #03171f;
+    text-align: left;
+    padding-right: 30px;
+    background-color: rgba(255, 192, 203, 0.211);
+}
+
+#box3 {
+    border: none;
+    margin-left: 10px;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    box-shadow: #03171f;
+    text-align: left;
+    padding-right: 30px;
+    background-color: rgba(255, 255, 0, 0.252);
+}
+
+#sectionD {
+    margin: 70px;
+    display: flex;
+}
+
+#lives {
+    font-size: 80px;
+    color: purple;
+}
+
+#save {
+    font-size: 60px;
+    color: red;
+}
+
+.recent {
+    font-size: 30px;
+}
+
+.half-width {
+    width: 50%;
+    padding: 45px;
+
+}
+
+.half-width img {
+    width: 210%;
+    margin-top: 50px;
+}
+
+#sectionE {
+    margin: 70px;
+    display: flex;
+}
+
+.for-this {
+    width: 50%;
+    padding: 45px;
+
+
+}
+
+.for-this img {
+    width: 100%;
+    margin-top: 50px;
+    height: 85%;
+
 }
